# electrolyzer

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ci_docs.yml
docs/: CONTRIBUTING.md  _config.yml  _toc.yml  alkaline_ref.md  installing.md  intro.md
electrolyzer/: __init__.py
electrolyzer/simulation/: base.py  bert.py  cell.py  cluster.py  stack.py  supervisor.py
electrolyzer/simulation/cell_models/: alkaline.py  cell.py  pem.py
electrolyzer/tools/: modeling_schema.yaml  validators.py
electrolyzer/tools/analysis/: lcoh.py  run_lcoh.py
electrolyzer/tools/design/: optimization.py
examples/: controller_test_draft.py
examples/example_01_polarization/: example_run.py
examples/example_02_electrolyzer/: example_run.ipynb  example_run.py
examples/example_03_optimization/: optimization.ipynb
examples/example_04_lcoh/: cost_example_run.py
examples/example_05_controller/: example_05_controller_options.ipynb  example_05_controller_options.py
examples/example_06_alkaline/: alkaline_example_run.py
examples/example_06_conversion_efficiency/: example_run.ipynb
tests/: test_PEM_cell.py  test_cell.py  test_stack.py  test_type_dec.py
tests/glue_code/: test_optimization.py  test_run_electrolyzer.py  test_run_lcoh.py
tests/inputs/: test_validation.py
