[build-system]
requires = ["setuptools >= 40.6.0", "wheel","setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "electrolyzer"
dynamic = ["version"]
authors = [{name = "NLR", email = "christopher.bay@nlr.gov"}]
readme = {file = "README.md", content-type = "text/markdown"}
description = "A controls-oriented engineering electrolyzer model."
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "matplotlib",
    "rainflow",
    "attrs",
    "jsonschema",
    "ruamel.yaml",
]
keywords = [
    "electrolyzer",
    "hydrogen",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
develop = [
    "pytest",
    "pytest-subtests",
    "pytest-dependency",
    "pre-commit",
    "pytest_mock",
    "responses",
    "jupyter-book",
    "readthedocs-sphinx-ext",
    "Sphinx",
    "sphinxcontrib-napoleon",
]
examples = ["jupyterlab"]
all = ["electrolyzer[develop,examples]"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "electrolyzer",
    "electrolyzer/tools/modeling_schema.yaml",
    "electrolyzer/*",
    "library/*.yaml",
]

[tool.setuptools.dynamic]
version = {attr = "electrolyzer.__version__"}

[tool.coverage.run]
# Coverage.py configuration file
# https://coverage.readthedocs.io/en/latest/config.html
branch = true
source = ["electrolyzer/*"]
omit = [
  "setup.py",
  "tests/*"
]

[tool.pytest.ini_options]
python_files = [
  "tests/*.py",
]
testpaths = [
  "test/*.py",
  "test/glue_code/*.py",
]


[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''


[tool.isort]
multi_line_output = 3
ensure_newline_before_comments = true
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
known_third_party = [
    "numpy",
    "pandas",
    "scipy",
    "attr"
]
known_first_party = ["electrolyzer"]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
length_sort = true
lines_after_imports = 2
line_length = 88
